--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,9 @@
 		<scope>provided</scope>
 		
 		</dependency>
+		<properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+</properties>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
